--- a/volumes/dinocash/resources/css/app.css
+++ b/volumes/dinocash/resources/css/app.css
@@ -4,7 +4,7 @@
 
 @font-face {
     font-family: Upheavtt;
-    src: url("upheavtt.ttf") format("opentype");
+    src: url("FF-Mark/MarkPro-Heavy.otf") format("opentype");
 }
 
 @layer components {
