versao v2 sem as fontes

--- a/volumes/dinocash/resources/css/app.css
+++ b/volumes/dinocash/resources/css/app.css
@@ -29,10 +29,10 @@
         @apply bg-[#1C1328] border-2 border-roxo rounded-2xl py-3;
     }
     .login-input {
-        @apply !bg-[#17101F] !rounded-2xl !py-3 input-lg;
+        @apply !bg-[#17101F] !rounded-2xl !py-3 input-md !text-white 
     }
     .user-button {
-        @apply py-2 bg-verde-escuro text-black px-10 rounded-xl font-menu md:text-3xl
+        @apply py-2 bg-verde text-black px-10 rounded-xl font-menu md:text-3xl
     }
     .lp-button {
         @apply py-2 bg-verde text-[#441C5B] px-5 rounded-xl font-menu text-xl md:text-2xl flex justify-center items-center
