versão v2 layout completo

--- a/volumes/dinocash/resources/css/app.css
+++ b/volumes/dinocash/resources/css/app.css
@@ -2,11 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-@font-face {
-    font-family: Upheavtt;
-    src: url("FF-Mark/MarkPro-Heavy.otf") format("opentype");
-}
+/* @font-face {
+    font-family: "Inter", sans-serif;
+    src: url("inter/Inter-Bold.ttf") format("opentype");
 
+} */
+
+/* .font-menu {
+    font-family: "Upheavtt";
+    src: url("FF-Mark/MarkPro-Heavy.otf") format("opentype");
+} */
 @layer components {
     .admin-input {
         @apply bg-[#212121] input-sm py-0 select-sm border-[1px] border-gray-500 rounded-md px-2 text-white;
@@ -29,12 +34,12 @@
         @apply bg-[#1C1328] border-2 border-roxo rounded-2xl py-3;
     }
     .login-input {
-        @apply !bg-[#17101F] !rounded-2xl !py-3 input-md !text-white 
+        @apply !bg-[#17101F] !rounded-2xl !py-3 input-md !text-white;
     }
     .user-button {
-        @apply py-2 bg-verde text-black px-10 rounded-xl font-menu md:text-3xl
+        @apply py-2 bg-verde text-black px-10 rounded-xl font-menu md:text-3xl font-bold whitespace-nowrap flex justify-center;
     }
     .lp-button {
-        @apply py-2 bg-verde text-[#441C5B] px-5 rounded-xl font-menu text-xl md:text-2xl flex justify-center items-center
+        @apply py-2 bg-verde text-[#441C5B] px-5 rounded-xl font-menu text-xl md:text-2xl flex justify-center items-center font-bold;
     }
 }
